Changes: - The flag of indexation is now atomic - Actual dates on the main page - Added English lemmatization - Added the paginated search results - Highlighting whole words instead of their lemma - Deleted most of the yellow underlining